--- a/static/css/theme-workshop.css
+++ b/static/css/theme-workshop.css
@@ -253,7 +253,7 @@ div.notices.info p {
    ============================================================ */
 #body-inner img {
   max-width: 100% !important;
-  width: 90% !important;
+  width: auto !important;
   height: auto !important;
   display: block;
   margin: 2rem auto !important;
